fixed issue and added background to home for visibility

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -125,3 +125,16 @@ form{
         min-height: 30vh;
     }
 }
+
+
+
+
+
+
+
+/* nonso's additions */
+
+.home-txt{
+    background-color: rgba(0, 0, 0, 0.4);
+    box-shadow:  0px 0px 80px 40px rgba(0, 0, 0, 0.5);
+}
